add_executable(mp_create unittest.c)
add_executable(mp_destroy unittest.c)
add_executable(mp_malloc unittest.c)
add_executable(mp_calloc unittest.c)
add_executable(mp_realloc unittest.c)
add_executable(mp_free unittest.c)
add_executable(mp_free_size unittest.c)
add_executable(mp_total_size unittest.c)
add_executable(mp_largest_block_size unittest.c)

target_include_directories(mp_create PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_include_directories(mp_destroy PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_include_directories(mp_malloc PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_include_directories(mp_calloc PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_include_directories(mp_realloc PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_include_directories(mp_free PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_include_directories(mp_free_size PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_include_directories(mp_total_size PRIVATE ${CMAKE_SOURCE_DIR}/include)
target_include_directories(mp_largest_block_size PRIVATE ${CMAKE_SOURCE_DIR}/include)

target_link_libraries(mp_create memorypool)
target_link_libraries(mp_destroy memorypool)
target_link_libraries(mp_malloc memorypool)
target_link_libraries(mp_calloc memorypool)
target_link_libraries(mp_realloc memorypool)
target_link_libraries(mp_free memorypool)
target_link_libraries(mp_free_size memorypool)
target_link_libraries(mp_total_size memorypool)
target_link_libraries(mp_largest_block_size memorypool)

target_compile_definitions(mp_create PRIVATE MP_CREATE_TEST)
target_compile_definitions(mp_destroy PRIVATE MP_DESTROY_TEST)
target_compile_definitions(mp_malloc PRIVATE MP_MALLOC_TEST)
target_compile_definitions(mp_calloc PRIVATE MP_CALLOC_TEST)
target_compile_definitions(mp_realloc PRIVATE MP_REALLOC_TEST)
target_compile_definitions(mp_free PRIVATE MP_FREE_TEST)
target_compile_definitions(mp_free_size PRIVATE MP_FREE_SIZE_TEST)
target_compile_definitions(mp_total_size PRIVATE MP_TOTAL_SIZE_TEST)
target_compile_definitions(mp_largest_block_size PRIVATE MP_LARGEST_BLOCK_SIZE_TEST)

add_test(mp_create_test mp_create)
add_test(mp_destroy_test mp_destroy)
add_test(mp_malloc_test mp_malloc)
add_test(mp_calloc_test mp_calloc)
add_test(mp_realloc_test mp_realloc)
add_test(mp_free_test mp_free)
add_test(mp_free_size_test mp_free_size)
add_test(mp_total_size_test mp_total_size)
add_test(mp_largest_block_size_test mp_largest_block_size)